--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,13 @@ dependencyResolutionManagement {
         maven { url = 'https://mccheatz.github.io/maven_repo/' }
         google()
         mavenCentral()
+        maven {
+            url = 'https://maven.pkg.github.com/SkidderMC/ProtoHax'
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME_GITHUB")
+                password = project.findProperty("gpr.token") ?: System.getenv("TOKEN_GITHUB")
+            }
+        }
     }
 }
 rootProject.name = 'ProtoHax-Android'
