--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,4 +26,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: app-release
-        path: build/outputs/apk/release/app-release.apk
+        path: ./app/build/outputs/apk/release/app-release.apk
