--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,6 +22,10 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew app:assembleDebug
+    - name: List files
+      run: ls
+    - name: List files 2
+      run: ls -R ./app/build/outputs/apk/
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
