--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew app:assembleDebug
+      run: ./gradlew app:assembleRelease
     - name: Upload build artifacts
       uses: actions/upload-artifact@v2
       with:
-        name: ProtoHax-debug-${{ github.sha }}
-        path: ./app/build/outputs/apk/debug/app-debug.apk
+        name: ProtoHax-build-${{ github.sha }}
+        path: ./app/build/outputs/apk/release/app-release.apk
