--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,9 @@ android {
 }
 
 dependencies {
-    implementation 'dev.sora.relay:protohax:+'
+    implementation('dev.sora.relay:protohax:+') {
+        transitive = false
+    }
     implementation 'dev.sora.networking:libmitm:1.2.3-raknet'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'
