--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,7 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         mavenLocal()
-        maven { url = 'https://mccheatz.github.io/maven_repo/' }
+        maven { url = 'https://repo.genshit.xyz/maven_repo/' }
         google()
         mavenCentral()
         maven {
